--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".Main2Activity">
 
+    <com.example.opengl_test.OpenGLView
+        android:id="@+id/openGLView2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
